data/diff_tests/wasmtime/if_IncorrectHandlingofControlFlowAcrossModuleBoundaries_2097.wast.bin.wast
(assert_invalid
  (module binary
    "\00\61\73\6d\01\00\00\00\01\88\80\80\80\00\02\60"
    "\00\01\7f\60\00\00\02\a1\80\80\80\00\02\07\6d\6f"
    "\64\75\6c\65\31\05\66\75\6e\63\31\00\00\07\6d\6f"
    "\64\75\6c\65\32\05\66\75\6e\63\32\00\01\03\82\80"
    "\80\80\00\01\00\0a\9c\80\80\80\00\01\96\80\80\80"
    "\00\00\10\00\04\7f\10\01\10\00\04\7f\41\2a\05\41"
    "\00\0b\05\41\01\0b\0b"
  )
""
)